--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=JC3248W535EN-Touch-LCD
-version=0.9.3
+version=0.9.5
 author=AudunKodehode
 maintainer=audunkodehode@gmail.com
 sentence=A library for the JC3248W535EN LCD touch display.
@@ -7,5 +7,5 @@ paragraph=Provides easy-to-use drawing functions and touch input handling for th
 category=Display
 url=https://github.com/AudunKodehode/JC3248W535EN-Touch-LCD
 architectures=esp32
-depends=
+depends=Arduino_GFX_Library,JPEGDecoder
 includes=JC3248W535EN-Touch-LCD.h
