--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=Provides easy-to-use drawing functions and touch input handling for th
 category=Display
 url=https://github.com/AudunKodehode/JC3248W535EN-Touch-LCD
 architectures=esp32
-depends=Arduino_GFX_Library,JPEGDecoder
+depends=Arduino_GFX,JPEGDecoder
 includes=JC3248W535EN-Touch-LCD.h
